2009-06-18  Florent Lamiraux  <florent@laas.fr>

	Add chest in humanoid robot.
	* interfaces/jrlHumanoidDynamicRobot.h: Note that waist and
	chest may be the same joint.

2009-06-18  Florent Lamiraux  <florent@laas.fr>

	Add a class providing functional decomposition of a hum. robot.
	* interfaces/jrlHumDynRobotType2.h: Provide list of joints 
	correponding to each arm, each leg and the head.

2009-06-17  Florent Lamiraux  <florent@laas.fr>

	(get|set)ActuatedJoints() now handles joints instead of int.
	* interfaces/jrlDynamicRobot.h: here.

2009-06-13  Florent Lamiraux  <florent@laas.fr>

	Temporarily Remove GetBodyPartJoints() method.
	* interfaces/jrlHumanoidDynamicRobot.h: remove method that
	returns list of joints correponding to some parts of the robot
	(waist, chest, arms, legs,...)

2009-06-13  Florent Lamiraux  <florent@laas.fr>

	CjrlHumanoidRobot::footHeight() is deprecated.
	* interfaces/jrlHumanoidDynamicRobot.h: declare method deprecated
	Information returned by this method is now in class CjrlFoot.

2009-06-13  Florent Lamiraux  <florent@laas.fr>

	Add abstract interface for foot.
	* documentation/pictures/foot.fig: define geometric data in picture,
	* documentation/pictures/foot.png: picture
	* interfaces/CMakeLists.txt: add jrlFoot.h in headers to be installed
	* interfaces/jrlFoot.h: define CjrlFoot as deriving from CjrlJoint
	* interfaces/jrlHumanoidDynamicRobot.h: Methods relative to feet manipulate CjrlFoot instead of CjrlJoint.

2009-06-12  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Beautification of the abstract Interface.
	* interfaces/jrlDynamicRobot.h: Added Specialized Inverse Kinematics.
	The goal is not provide a generic inverse kinematics, but the possibility
	to have specialized one by robot. The instance of specialized
	kinematic are found by the pair RootJoint-EndJoint.
        The method can returns false if such specialized inverse kinematics
	does not exist.
	* interfaces/jrlHumanoidDynamicRobot.h: Removed dirty interface.